# 4chan

./: README.md  go.mod  go.sum  pyproject.toml
cmd/: main.go
data/: forum.db
internal/: data.go  db.go  parsecrimes.go  scraper.go
notebooks/: crimes.json  crimes_analysis.ipynb  text_mining.ipynb
notebooks/.ipynb_checkpoints/: crimes-checkpoint.json  text_mining-checkpoint.ipynb
